fix similar songs bug on mobile

--- a/src/css/story/explorer.styl
+++ b/src/css/story/explorer.styl
@@ -34,7 +34,7 @@ h3.songchart-title
     background-color: $focal_color
     color: #fff
     font-weight: bold
-  a:hover, a:focus
+  a:hover
     background-color: $contrast_color
     color: #fff
     font-weight: bold
